--- a/Translations/German/text-improvement-change.xml
+++ b/Translations/German/text-improvement-change.xml
@@ -77,7 +77,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_GROVE</zType>
-		<Translation>Plantage~eien Plantage~Plantagen</Translation>
+		<Translation>Plantage~eine Plantage~Plantagen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_NETS</zType>
